--- a/app/src/main/res/layout/employee_item.xml
+++ b/app/src/main/res/layout/employee_item.xml
@@ -23,39 +23,41 @@
             android:layout_height="77dp"
             android:layout_marginStart="26dp"
             android:layout_marginBottom="16dp"
+            android:contentDescription="@string/profile_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_launcher_background" />
+            app:srcCompat="@drawable/ic_male_placeholder" />
 
         <TextView
-            android:id="@+id/hospitalName"
+            android:id="@+id/userName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
-            android:layout_marginEnd="15dp"
+            android:layout_marginEnd="26dp"
             android:maxLines="2"
-            android:textSize="16sp"
             android:text="@{employee.name}"
-            app:layout_constraintBottom_toTopOf="@+id/doctorNames"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/companyName"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toEndOf="@+id/profileImage"
             app:layout_constraintTop_toTopOf="@+id/profileImage"
             app:layout_constraintVertical_chainStyle="packed" />
 
         <TextView
-            android:id="@+id/doctorNames"
+            android:id="@+id/companyName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="46dp"
+            android:layout_marginEnd="26dp"
             android:text="@{employee.company.name}"
             android:textSize="13sp"
             app:layout_constraintBottom_toBottomOf="@+id/profileImage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/profileImage"
-            app:layout_constraintTop_toBottomOf="@+id/hospitalName" />
+            app:layout_constraintTop_toBottomOf="@+id/userName" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
