--- a/app/src/main/res/layout/fragment_employee_list.xml
+++ b/app/src/main/res/layout/fragment_employee_list.xml
@@ -32,8 +32,9 @@
             android:layout_marginStart="50dp"
             android:layout_marginEnd="50dp"
             android:gravity="center"
-            android:textSize="18sp"
-            android:text="List"
+            android:textSize="@dimen/title"
+            android:textColor="@color/colorBlack"
+            android:text="@string/employee_list"
             android:layout_marginTop="20dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -45,7 +46,6 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:layout_marginTop="16dp"
-            android:overScrollMode="never"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
