--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -3,29 +3,28 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/nav_graph"
-    app:startDestination="@id/FirstFragment">
+    app:startDestination="@id/EmployeeListFragment">
 
     <fragment
-        android:id="@+id/FirstFragment"
+        android:id="@+id/EmployeeListFragment"
         android:name="com.dino.something.module.home.EmployeeListFragment"
-        android:label="@string/first_fragment_label"
+        android:label="@string/list_fragment_label"
         tools:layout="@layout/fragment_employee_list">
-
         <action
-            android:id="@+id/action_FirstFragment_to_SecondFragment"
-            app:destination="@id/SecondFragment" />
+            android:id="@+id/action_EmployeeListFragment_to_EmployeeDetailFragment"
+            app:destination="@id/EmployeeDetailFragment" />
     </fragment>
     <fragment
-        android:id="@+id/SecondFragment"
+        android:id="@+id/EmployeeDetailFragment"
         android:name="com.dino.something.module.home.EmployeeDetailFragment"
-        android:label="@string/second_fragment_label"
+        android:label="@string/employee_detail_fragment_label"
         tools:layout="@layout/fragment_employee_detail">
 
-        <action
-            android:id="@+id/action_SecondFragment_to_FirstFragment"
-            app:destination="@id/FirstFragment" />
         <argument
             android:name="mData"
             app:argType="string" />
+        <action
+            android:id="@+id/action_EmployeeDetailFragment_to_EmployeeListFragment"
+            app:destination="@id/EmployeeListFragment" />
     </fragment>
 </navigation>
